# production-tests

.github/workflows/: main.yml  shellcheck.ym;
main_tests/: production_60GHZ-CONN.sh  production_ADRD3161.sh  production_ADRD4161.sh  production_ADRD5161.sh  production_APARD-PFWD.sh  production_APARD-SPOE.sh  production_ARDUINO-HELPKIT.sh  production_ETH2GMSL.sh  production_EV-CHARGER.sh  production_GMSL716MIPI.sh  production_MAX-ARDUINO.sh  production_PQM.sh  production_RPIPLCPSE.sh  production_SWIOT.sh  production_T1L-2-USB.sh  script.sh  setup_env.sh  supported_boards.sh
main_tests/60ghz/: 60ghz-conn_test.sh  60ghz_attr_test.sh  production.sh
main_tests/adrd3161/: firmware.elf  ioconfig_adrd3161.toml  mcu_flash_with_serialno.sh  production.sh  system_test.sh  tmc_bootstrap.sh
main_tests/adrd3161/adrd3161_tests/: CMakeLists.txt  Dockerfile  entrypoint.sh  package.xml
main_tests/adrd3161/adrd3161_tests/config/: one_adrd3161.yaml
main_tests/adrd3161/adrd3161_tests/config/canopen_one_adrd3161/: adrd3161.eds  bus.yml
main_tests/adrd3161/adrd3161_tests/test/: test_board.py
main_tests/adrd3161/adrd3161_tests/urdf/: one_adrd3161.urdf.xacro
main_tests/adrd4161/: adrd4161_blink.elf  adrd4161_blink_test.sh  adrd4161_slcan.elf  can_init.sh  firmware.sh  imu_test.sh  production.sh  test_can_bus_load.py  test_can_rx_tx.py  toggle_led.sh
main_tests/adrd5161/: mcu_flash_max17320.sh  mcu_flash_with_serialno.sh  production.sh  system_check.sh  system_test.sh  test_adrd5161.py
main_tests/adrv1_crr_test/: production.sh
main_tests/adrv9361_bob/: dcxo_test.sh  rf_test.sh
main_tests/adv9009_crr-som/: production.sh
main_tests/apard-pfwd/: port_1.sh  port_2.sh  production.sh  system_test.sh
main_tests/apard-spoe/: firmware_prod.sh  production.sh  system_test.sh
main_tests/arduino-helpkit/: production.sh  system_test.sh
main_tests/eth2gmsl/: Makefile  media_config_p1.sh  media_config_p2.sh  open_frame_p1.sh  open_frame_p2.sh  phys_addr.h  production.sh  test_gpio  test_gpio-aarch64  test_gpio.c  test_periph.sh  test_uart.expect  test_uart.sh  test_util.sh  uart_pins.sh
main_tests/ev-charger/: firmware_prod.sh  led_test.sh  production.sh  system_test.sh
main_tests/fmcomms2-3/: dcxo_test.sh  production.sh  rf_test.sh
main_tests/fmcomms4/: production.sh  rf_test.sh
main_tests/gmsl716mipi/: cam_setup.sh  driver_comm.sh  production.sh  streaming_test.sh  test_voltage_supply.sh  video_cfg.sh
main_tests/lib/: production.sh  utils.sh
main_tests/max-arduino/: check_wifi.sh  firmware_p.sh  firmware_prod.sh  flash_nina.hex  gpio_control.sh  (+3 more)
(+27 files in other folders)
